# nexo-data-pipeline

./: .gitignore  README.md  clean_aggregate.py  extract_api.py  extract_bdd.py  extract_csv.py  extract_scraping.py  generate_excel_template.py  import_bdd.py  main.py  pipeline.yml  purge_audit_logs.py  pyproject.toml  requirements.txt
data/clean/: dataset_final.csv
data/output/: template_import_nexo.xlsx  ~$template_import_nexo.xlsx
data/raw/: nexo_export.csv  salaries_legacy.csv  sirene.csv  tarifs_scraping.csv
